--- a/src/docs/Products/Products.yaml
+++ b/src/docs/Products/Products.yaml
@@ -1,18 +1,19 @@
 openapi: 3.0.0
 info:
   title: Products API
-  description: API documentation for product management.
+  description: API for managing products.
   version: 1.0.0
 servers:
-  - url: https://backend-production-61c2.up.railway.app/apidocs/
-    description: Local server
+  - url: /api
+    description: The API server
+
 paths:
   /products:
     get:
-      summary: Get all products
+      summary: Retrieve all products
       responses:
         '200':
-          description: List of all products
+          description: A list of all products
           content:
             application/json:
               schema:
@@ -20,52 +21,46 @@ paths:
                 properties:
                   status:
                     type: string
-                    description: Status of the request
                   payload:
                     type: array
                     items:
                       type: object
                       properties:
-                        _id:
+                        id:
                           type: string
-                          description: Product ID
                         title:
                           type: string
-                          description: Product title
                         price:
                           type: number
-                          format: float
-                          description: Product price
-                        stock:
-                          type: integer
-                          description: Product stock
                         thumbnail:
                           type: string
-                          description: URL of the product thumbnail
+                        stock:
+                          type: integer
+
     post:
       summary: Add a new product
       requestBody:
         required: true
         content:
-          multipart/form-data:
+          application/json:
             schema:
               type: object
               properties:
                 title:
                   type: string
+                description:
+                  type: string
                 price:
                   type: number
-                  format: float
                 stock:
                   type: integer
+                category:
+                  type: string
                 thumbnail:
-                  type: array
-                  items:
-                    type: string
-                  description: URLs of product thumbnails
+                  type: string
       responses:
         '200':
-          description: Product added successfully
+          description: The created product
           content:
             application/json:
               schema:
@@ -73,29 +68,34 @@ paths:
                 properties:
                   status:
                     type: string
-                    description: Status of the request
                   payload:
                     type: object
                     properties:
-                      _id:
+                      id:
                         type: string
-                        description: Product ID
-        '400':
-          description: Error adding product
+                      title:
+                        type: string
+                      price:
+                        type: number
+                      thumbnail:
+                        type: string
+                      stock:
+                        type: integer
+                      category:
+                        type: string
 
   /products/{pid}:
     get:
-      summary: Get a product by ID
+      summary: Retrieve a specific product by ID
       parameters:
         - name: pid
           in: path
           required: true
-          description: Product ID
           schema:
             type: string
       responses:
         '200':
-          description: Product details
+          description: The specified product
           content:
             application/json:
               schema:
@@ -103,28 +103,19 @@ paths:
                 properties:
                   status:
                     type: string
-                    description: Status of the request
                   payload:
                     type: object
                     properties:
-                      _id:
+                      id:
                         type: string
-                        description: Product ID
                       title:
                         type: string
-                        description: Product title
                       price:
                         type: number
-                        format: float
-                        description: Product price
-                      stock:
-                        type: integer
-                        description: Product stock
                       thumbnail:
                         type: string
-                        description: URL of the product thumbnail
-        '400':
-          description: Error retrieving product
+                      stock:
+                        type: integer
 
     put:
       summary: Update a product by ID
@@ -132,44 +123,37 @@ paths:
         - name: pid
           in: path
           required: true
-          description: Product ID
           schema:
             type: string
       requestBody:
         required: true
         content:
-          multipart/form-data:
+          application/json:
             schema:
               type: object
               properties:
                 title:
                   type: string
+                description:
+                  type: string
                 price:
                   type: number
-                  format: float
                 stock:
                   type: integer
+                category:
+                  type: string
                 thumbnail:
-                  type: array
-                  items:
-                    type: string
-                  description: Updated URLs of product thumbnails
+                  type: string
       responses:
         '200':
-          description: Product updated successfully
+          description: Success message
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: string
-                    description: Status of the request
                   message:
                     type: string
-                    description: Success message
-        '400':
-          description: Error updating product
 
     delete:
       summary: Delete a product by ID
@@ -177,49 +161,35 @@ paths:
         - name: pid
           in: path
           required: true
-          description: Product ID
           schema:
             type: string
       responses:
         '200':
-          description: Product deleted successfully
+          description: Success message
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  status:
-                    type: string
-                    description: Status of the request
                   message:
                     type: string
-                    description: Success message
-        '400':
-          description: Error deleting product
 
-  /products/{pid}/email:
-    delete:
-      summary: Send an email notification when a product is deleted
-      parameters:
-        - name: pid
-          in: path
-          required: true
-          description: Product ID
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Email sent successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    description: Status of the request
-                  success:
-                    type: string
-                    description: Success message
-        '400':
-          description: Error sending email
+components:
+  schemas:
+    Product:
+      type: object
+      properties:
+        id:
+          type: string
+        title:
+          type: string
+        description:
+          type: string
+        price:
+          type: number
+        stock:
+          type: integer
+        category:
+          type: string
+        thumbnail:
+          type: string
